Sneaking in under the line

--- a/Mod/manifest.json
+++ b/Mod/manifest.json
@@ -1,7 +1,7 @@
 {
     "id": "Snakefangox_AstralMedusae",
     "title": "Astral Medusae",
-    "description": "Pending",
+    "description": "Thick tentacles trail lonely over cold mountains, something is waiting for you. Made for the 2024 Qud mod jam.",
     "version": "0.1.0",
     "author": "Snakefangox",
     "PreviewImage": "preview.png"
